<resources>
    <string name="app_name">Presensi</string>
    <string name="title_beranda">Beranda</string>
    <string name="title_presensi">Presensi</string>
    <string name="title_kehadiran">Kehadiran</string>
    <string name="title_notif">Notifikasi</string>
    <string name="title_akun">Akun</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="masuk">Masuk</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="email">Email</string>
    <string name="kata_sandi">Password</string>
    <string name="dont_have_account">Belum punya akun ?</string>
    <string name="create_account">Daftar</string>
</resources>
