<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_beranda"
            android:icon="@drawable/ic_home"
            android:title="@string/title_beranda"/>

    <item
            android:id="@+id/navigation_kehadiran"
            android:icon="@drawable/ic_bx_calendar"
            android:title="@string/title_kehadiran"/>

    <item
            android:id="@+id/navigation_presensi"
            android:title="@string/title_presensi"/>

    <!--android:icon="@drawable/ic_dashboard_black_24dp"-->

    <item
            android:id="@+id/navigation_notif"
            android:icon="@drawable/ic_bx_bell"
            android:title="@string/title_notif"/>

    <item
        android:id="@+id/navigation_akun"
        android:icon="@drawable/ic_bx_user"
        android:title="@string/title_akun"/>
</menu>
